Feat: Play feature done with enabling text editor for t&c

--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,15 @@
 * {
   font-family: 'Montserrat', sans-serif;;
 }
+
+input:not([type='file']) {
+  @apply !border-[#BDBDBD];
+}
+
+input:disabled {
+  @apply !bg-gray-100;
+}
+
+.checkbox:disabled {
+  @apply !border-gray-600;
+}
