--- a/src/index.css
+++ b/src/index.css
@@ -19,3 +19,15 @@ input:disabled {
 .checkbox:disabled {
   @apply !border-gray-600;
 }
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
