--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
   font-family: 'Montserrat', sans-serif;;
 }
 
-input:not([type='file']) {
+input:not([type='file']):not([type='radio']) {
   @apply !border-[#BDBDBD];
 }
 
